--- a/index.html
+++ b/index.html
@@ -1,87 +1,168 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>eRDF by cgueret</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<title>eRDF by cgueret</title>
+<link rel="stylesheet" href="stylesheets/styles.css">
+<link rel="stylesheet" href="stylesheets/pygment_trac.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="javascripts/main.js"></script>
+<!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, user-scalable=no">
+</head>
+<body>
 
-  </head>
-  <body>
+	<header>
+		<h1>eRDF</h1>
+		<p>Library to query the Web of Data with evolutionary algorithms</p>
+	</header>
 
-      <header>
-        <h1>eRDF</h1>
-        <p>Library to query the Web of Data with evolutionary algorithms</p>
-      </header>
+	<div id="banner">
+		<span id="logo"></span> <a href="https://github.com/cgueret/eRDF"
+			class="button fork"><strong>View On GitHub</strong></a>
+		<div class="downloads">
+			<span>Downloads:</span>
+			<ul>
+				<li><a
+					href="https://github.com/downloads/cgueret/eRDF/eRDF.zip"
+					class="button">ZIP</a></li>
+			</ul>
+		</div>
+	</div>
+	<!-- end banner -->
 
-      <div id="banner">
-        <span id="logo"></span>
+	<div class="wrapper">
+		<nav>
+			<ul></ul>
+		</nav>
+		<section>
+			<h3>eRDF query engine</h3>
 
-        <a href="https://github.com/cgueret/eRDF" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/cgueret/eRDF/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/cgueret/eRDF/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+			<p>
+				The Web of Data is growing at an amazing rate as more and more
+				data-sources are being made available online in RDF, and linked. At
+				the same time specialised triple-stores, such as Virtuoso, OWLIM or
+				4store, have matured into powerful engines that can efficiently
+				answer queries for a given schema over static data sets of billions
+				of curated RDF triples. However, in many cases the schema is not
+				known, nor is the precise nature of the search query, and the query
+				engine as to deal with imperfect data. The presence of many SPARQL
+				end points is also a challenge for querying them in a federated way.
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <h3>Welcome to GitHub Pages.</h3>
+				eRDF is a novel query engine developed at the <a
+					href="http://www.vu.nl/">Vrije Universiteit Amsterdam</a> and <a
+					href="http://dans.knaw.nl/">Data Archiving and Networked
+					Services</a>. It uses the robustness of evolutionary algorithms to
+				answer complex SPARQL query over many end points.
+			</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+			<h3>Usage</h3>
+			<p>Let's suppose you want to find some persons and the capital of
+				the country they live in:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+			<pre><code>PREFIX rdf: &lt;http://www.w3.org/1999/02/22-rdf-syntax-ns#&gt;
+PREFIX foaf: &lt;http://xmlns.com/foaf/0.1/&gt;
+PREFIX rdfs: &lt;http://www.w3.org/2000/01/rdf-schema#&gt;
+PREFIX db: &lt;http://dbpedia.org/ontology/&gt;
+ 
+SELECT DISTINCT ?person ?first ?last ?home ?capital WHERE {
+    ?person  rdf:type         foaf:Person.
+    ?person  foaf:firstName   ?first.
+    ?person  foaf:family_name ?last.
+    OPTIONAL {
+    ?person  foaf:homepage    ?home.
+    }
+    ?person  foaf:based_near  ?country.
+    ?country rdf:type         db:Country.
+    ?country db:capital       ?capital.
+    ?capital rdf:type         db:Place.
+}
+ORDER BY ?first</code></pre>
+			<p>Such a query can be answered by combining data from the dog
+				food server and dbpedia. More data sets may also contain list of
+				people but let’s focus on researchers as a start. We’ll have to
+				indicate to eRDF which are the end points to query, this is done
+				with a simple csv listing:</p>
+			<pre><code>DBpedia;http://dbpedia.org/sparql
+Semantic Web Dog Food;http://data.semanticweb.org/sparql</code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+			<p>Assuming the query is saved into a "people.sparql" file and
+				the end points list goes into a "endpoints.csv", the query engine is
+				called like this:</p>
+			<pre><code>java -cp nl.erdf.datalayer-sparql-0.1-SNAPSHOT.jar nl.erdf.main.SPARQLEngine -q people.sparql -s endpoints.csv -t 5</code></pre>
+			<p>The query will first be scanned for its basic graph patterns,
+				all of them will be grouped and sent to the eRDF optimiser as a set
+				of constraints to solve. Then, eRDF will look for solutions matching
+				as many of these constraints as possible and push back all the
+				relevant triples found back into an RDF model. After some time (set
+				with the parameter “t”), eRDF is stopped and Jena is used to issue
+				the query over the model that was just populated. The answers are
+				then displayed, along with a list of the data sources that
+				contributed in finding them.</p>
+			<p>If you don’t know which end points are likely to contribute to
+				the answers, you can just query all of the WOD and see what
+				happens... ;-) The package comes with a tool to fetch a list of
+				SPARQL end points from CKAN, test them and create a configuration
+				file. It gets called like that:
+			<pre><code>java -cp nl.erdf.datalayer-sparql-0.1-SNAPSHOT.jar nl.erdf.main.GetEndPointsFromCKAN</code></pre>
+			<p>After a few minutes, you will get a "ckan-endpoints.csv"
+				allowing you to run query the WoD from your laptop.</p>
 
-<h3>Designer Templates</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
-<h3>Rather Drive Stick?</h3>
+			<h3>Publications</h3>
+			<p>The publications related to this work are hosted, and
+				available as PDF, on Mendeley:</p>
+			<iframe
+				src="http://www.mendeley.com/groups/558371/project-erdf/widget/29/5/"
+				frameborder="0" allowTransparency="true"
+				style="width: 590px; height: 450px;"></iframe>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+			<h3>License</h3>
+			<p>
+				eRDF is licensed under the revised BSD and is available on <a
+					href="https://github.com/cgueret/eRDF">GitHub</a>.
+			</p>
 
-<h3>Authors and Contributors</h3>
+			<h3>Contact</h3>
+			<p>
+				Having trouble with eRDF? contact <a
+					href="mailto:christophe.gueret@dans.knaw.nl">christophe.gueret@dans.knaw.nl</a>
+				or <a href="https://twitter.com/cgueret" class="user-mention">@cgueret</a>
+				and we'll help you sort it out.
+			</p>
+		</section>
+		<footer>
+			<p>
+				Project maintained by <a href="https://github.com/cgueret">cgueret</a>
+			</p>
+			<p>
+				<small>Hosted on GitHub Pages &mdash; Theme by <a
+					href="http://twitter.com/#!/michigangraham">mattgraham</a></small>
+			</p>
+		</footer>
+	</div>
+	<!--[if !IE]><script>fixScale(document);</script><![endif]-->
+	<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl."
+				: "http://www.");
+		document
+				.write(unescape("%3Cscript src='"
+						+ gaJsHost
+						+ "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-2853717-5");
+			pageTracker._trackPageview();
+		} catch (err) {
+		}
+	</script>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/cgueret">cgueret</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-2853717-5");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-  </body>
+</body>
 </html>
